# esp-32-base

./: Cargo.toml  README.md  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
docs/: 001-running.md
docs/info/: components.txt
src/: main.rs
src/logical/http/server/: main.rs  mod.rs  routes.rs
src/physical/: mod.rs
src/physical/converters/: adc.rs
src/physical/peripherals/: mod.rs
src/physical/peripherals/leds/: mod.rs
src/physical/peripherals/sensors/light/: analog.rs
src/physical/wireless/: wifi.rs
